--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Shichan </h1>
+    <h1>Shinchan Shopping </h1>
         <h2>Shopping</h2>
 </body>
 </html>
